--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>MAPBOX & DARKSKY - Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem consectetur laudantium reiciendis, possimus neque repudiandae dolorum id repellendus nam, eius sunt error reprehenderit quas in eos! Iusto voluptate minima incidunt?</p>
         <img class="potratit" src="./img/c-1.jpg" alt="">
     </div>
     
